--- a/src/Index.html
+++ b/src/Index.html
@@ -1,6 +1,12 @@
 <html>
     <body>
-        <div id="app"></div>
+        <div id="app1"></div>
+        <div id="app2"></div>
+        <div id="app3"></div>
+        <div id="app4"></div>
+        <div id="app5"></div>
+        <div id="app6"></div>
+
         <script src="render.js"></script>
     </body>
 </html>
